added feedback section

--- a/index.html
+++ b/index.html
@@ -113,6 +113,27 @@
                     </div>
                 </div>
             </section>
+            <section class="feedback">
+                <img class="feedback__image" src="image/feedback-bg.jpg" alt="Feedback Background">
+                <div class="feedback__container">
+                    <h2 class="feedback__title title">Хотите посмотреть?</h2>
+                    <div class="feedback__body">
+                        <div class="feedback__text">
+                            <p>
+                                ЖК LoftHouse – это проект бизнес-класса, расположенный в центре города, на Наб. реки Фонтанки 10-15. Комплекс предлагает своим жильцам квартиры площадью от 40 до 170 кв. м. В здании будет три секции, в которых разместится всего 56 квартир.
+                            </p>
+                        </div>
+                        <form action="#" class="feedback__form form">
+                            <input type="text" class="form__input" placeholder="Вашу имя" name="name-user"autocomplete="off">
+                            <input type="tel" class="form__input" placeholder="Ваш телефон" name="name-tel"autocomplete="off">
+                            <p class="form__privacy">
+                                *Мы никому не передаем ваши данные. И не сохраняем ваш номер в базу.
+                            </p>
+                            <button type="submit" class="form__button">Посмотреть район</button>
+                        </form>
+                    </div>
+                </div>
+            </section>
         </main>
    </div>
 </body>
