--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         <div class="header__top top-header">
             <div class="top-header__logo">
                 <img src="image/logo.svg" alt="">
-                <div>Жилой комплекс</div>
             </div>
             <nav class="top-header__menu menu">
                 <div class="menu__burger">
@@ -134,7 +133,77 @@
                     </div>
                 </div>
             </section>
-        </main>
+            <section class="video-block">
+                <h2 class="video-block__title title visually-hidden">Это заголовок</h2>
+                <div class="video-block__container">
+                    <a href="#" class="video-block__link">
+                        <img src="image/video-preview.jpg" alt="preview" class="video-block__preview">
+                        <img src="image/icons/play-button.svg" alt="button-play" class="video-block__icon">
+                    </a>
+                </div>
+            </section>
+            <section class="map-block">
+                <div class="map-block__container">
+                    <h2 class="map-block__title title">Район на карте</h2>
+                    <div class="map-block__map">
+                        <div class="map" id="map"></div>
+                    </div>
+                </div>
+            </section>
+            <section class="subscribe">
+                <div class="subscribe__container">
+                    <h2 class="subscribe__title title">Есть вопросы?</h2>
+                    <form action="#" class="subscribe__form form">
+                        <input type="text" class="form__input" placeholder="Вашу имя" name="name-user"autocomplete="off">
+                        <input type="tel" class="form__input" placeholder="Ваш телефон" name="name-tel"autocomplete="off">
+                        <p class="form__privacy">
+                            *Мы никому не передаем ваши данные. И не сохраняем ваш номер в базу.
+                        </p>
+                        <button type="submit" class="form__button">Посмотреть район</button>
+                    </form>
+                </div>
+            </section>
+<footer class="footer">
+    <div class="footer__container">
+        <div class="footer__body">
+            <div class="footer__logo">
+                <img src="image/logo.svg" alt="Logo">
+            </div>
+            <nav class="footer__nav footer-nav">
+                <ul class="footer-nav__list">
+                    <li><a href="#" class="footer-nav__link">О комплексе</a></li>
+                    <li><a href="#" class="footer-nav__link">Район</a></li>
+                    <li><a href="#" class="footer-nav__link">Каталог квартир</a></li>
+                    <li><a href="#" class="footer-nav__link">Ипотека</a></li>
+                    <li><a href="#" class="footer-nav__link">Контакты</a></li>
+                </ul>
+            </nav>
+            <nav class="footer__nav footer-nav">
+                <ul class="footer-nav__list">
+                    <li><a href="#" class="footer-nav__link">Поселение и переезд</a></li>
+                    <li><a href="#" class="footer-nav__link">Сервисные услуги</a></li>
+                    <li><a href="#" class="footer-nav__link">Экологическая устойчивость</a></li>
+                    <li><a href="#" class="footer-nav__link">Инвестиционные возможности</a></li>
+                    <li><a href="#" class="footer-nav__link">Программа лояльности </a></li>
+                </ul>
+            </nav>
+            <div class="footer__address">
+                <ul class="footer-nav__list">
+                    <li>Адрес: Наб. реки Фонтанки 10-15</li>
+                    <li><a class="footer-nav__link" href="tel:+78121234567">8 (812) 123-45-67</a></li>
+                    <li>Отдел продаж: 10:00 - 20:00</li>
+                    <li>E-mail: <a href="mailto:vip@lofthouse.ru" class="footer-nav__link footer-nav__link_bold">vip@lofthouse.ru</a></li>
+                </ul>
+                <ul class="footer__social">
+                    <li><a href="#"><img src="image/social/yt.svg" alt="Icon youtube"></a></li>
+                    <li><a href="#"><img src="image/social/vk.svg" alt="Icon VK"></a></li>
+                    <li><a href="#"><img src="image/social/fb.svg" alt="Icon facebook"></a></li>
+                    <li><a href="#"><img src="image/social/in.svg" alt="Icon instagram"></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>        </main>
    </div>
 </body>
 </html>
