--- a/#source/html/header.html
+++ b/#source/html/header.html
@@ -1,15 +1,15 @@
 <header class="header">
     <div class="header__container">
-        <div class="header__top top-header">
-            <div class="top-header__logo">
+        <div class="header__top header-top">
+            <div class="header-top__logo">
                 <img src="image/logo.svg" alt="">
             </div>
-            <nav class="top-header__menu menu">
-                <div class="menu__burger">
+            <nav class="header-top__menu menu">
+                <button class="menu__burger">
                     <span></span>
                     <span></span>
                     <span></span>
-                </div>
+                </button>
                 <ul class="menu__list">
                     <li><a href="#" class="menu__link">О комплексе</a></li>
                     <li><a href="#" class="menu__link">Район</a></li>
