--- a/#source/html/header.html
+++ b/#source/html/header.html
@@ -11,9 +11,9 @@
                     <span></span>
                 </button>
                 <ul class="menu__list">
-                    <li><a href="#" class="menu__link">О комплексе</a></li>
+                    <li><a href="#" class="menu__link" data-goto=".benefits">О комплексе</a></li>
                     <li><a href="#" class="menu__link">Район</a></li>
-                    <li><a href="#" class="menu__link">Каталог квартир</a></li>
+                    <li><a href="#" data-goto=".flats" class="menu__link">Каталог квартир</a></li>
                     <li><a href="#" class="menu__link">Ипотека</a></li>
                     <li><a href="#" class="menu__link">Контакты</a></li>
                 </ul>
@@ -21,7 +21,7 @@
         </div>
         <h1 class="header__title">
             <span>Жилой комплекс<br> в историческом центре</span>
-            <a href="#"><img src="image/icons/mouse.svg" alt="mouse"></a>
+            <a href="#" data-goto=".content"><img src="image/icons/mouse.svg" alt="mouse"></a>
         </h1>
         <div class="header__contacts contacts">
             <a class="contacts__item contacts__item_right" href="#">
