--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LoftHouse</title>
+    <link type="image/png" sizes="96x96" rel="shortcut icon" href="favicon.png">
+    <!-- SEO -->
+    <meta name="description" content=" ">
+    <meta name="keywords" content=" "> 
+    <meta name="robots" content="">
+    <!-- Block link for iphone -->
+    <meta name="format-detection" content="telephone=no">
+    <!-- Автор страницы -->
+    <meta name="Author" content=""> 
+    <meta name="Copyright" content=""> 
+    <meta name="Address" content="">
     <link href="https://fonts.googleapis.com/css?family=Raleway:regular,700" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet" />
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="js/libs/lightbox/lightbox.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/app.js" defer></script>
     <script src="js/libs/lightbox/lightbox.js" defer></script>
 </head>
@@ -28,9 +39,9 @@
                     <span></span>
                 </button>
                 <ul class="menu__list">
-                    <li><a href="#" class="menu__link">О комплексе</a></li>
+                    <li><a href="#" class="menu__link" data-goto=".benefits">О комплексе</a></li>
                     <li><a href="#" class="menu__link">Район</a></li>
-                    <li><a href="#" class="menu__link">Каталог квартир</a></li>
+                    <li><a href="#" data-goto=".flats" class="menu__link">Каталог квартир</a></li>
                     <li><a href="#" class="menu__link">Ипотека</a></li>
                     <li><a href="#" class="menu__link">Контакты</a></li>
                 </ul>
@@ -38,7 +49,7 @@
         </div>
         <h1 class="header__title">
             <span>Жилой комплекс<br> в историческом центре</span>
-            <a href="#"><img src="image/icons/mouse.svg" alt="mouse"></a>
+            <a href="#" data-goto=".content"><img src="image/icons/mouse.svg" alt="mouse"></a>
         </h1>
         <div class="header__contacts contacts">
             <a class="contacts__item contacts__item_right" href="#">
@@ -67,7 +78,7 @@
                             </div>
                             <div class="benefits__item">
                                 <div class="benefits__image">
-                                    <img src="image/icons/building.svg" alt="Bench">
+                                    <img src="image/icons/building.svg" alt="Building">
                                 </div>
                                 <p class="benefits__text">
                                     Полностью обустроенный
@@ -75,7 +86,7 @@
                             </div>
                             <div class="benefits__item">
                                 <div class="benefits__image">
-                                    <img src="../image/icons/fountain.svg" alt="Fountain">
+                                    <img src="image/icons/fountain.svg" alt="Fountain">
                                 </div>
                                 <p class="benefits__text">
                                     10 фонтанов на территории
@@ -122,11 +133,11 @@
                         <div class="feedback__body">
                             <div class="feedback__text">
                                 <p>
-                                    ЖК LoftHouse – это проект бизнес-класса, расположенный в центре города, на Наб. реки Фонтанки 10-15. Комплекс предлагает своим жильцам квартиры площадью от 40 до 170 кв. м. В здании будет три секции, в которых разместится всего 56 квартир.
+                                    ЖК LoftHouse - это проект бизнес-класса, расположенный в центре города, на Наб. реки Фонтанки 10-15. Комплекс предлагает своим жильцам квартиры площадью от 40 до 170 кв. м. В здании будет три секции, в которых разместится всего 56 квартир.
                                 </p>
                             </div>
                             <form action="#" class="feedback__form form">
-                                <input type="text" class="form__input" placeholder="Вашу имя" name="name-user"autocomplete="off">
+                                <input type="text" class="form__input" placeholder="Ваше имя" name="name-user"autocomplete="off">
                                 <input type="tel" class="form__input" placeholder="Ваш телефон" name="name-tel"autocomplete="off">
                                 <p class="form__privacy">
                                     *Мы никому не передаем ваши данные. И не сохраняем ваш номер в базу.
@@ -160,7 +171,7 @@
                             <p class="form__privacy">
                                 *Мы никому не передаем ваши данные. И не сохраняем ваш номер в базу.
                             </p>
-                            <input type="text" class="form__input" placeholder="Вашу имя" name="name-user"autocomplete="off">
+                            <input type="text" class="form__input" placeholder="Ваше имя" name="name-user"autocomplete="off">
                             <input type="tel" class="form__input" placeholder="Ваш телефон" name="name-tel"autocomplete="off">
                             <button type="submit" class="form__button">Посмотреть район</button>
                         </form>
